--- a/HTML+CSS+JS/Background/Gradient_bg/style.css
+++ b/HTML+CSS+JS/Background/Gradient_bg/style.css
@@ -4,7 +4,7 @@ html, body {
   }
   
   body {
-      background: linear-gradient(-45deg, #ffc3a0, #6dd5ed, #753a88, #734b6d);
+      background: linear-gradient(-45deg, #ffc3a0, #6dd5ed, #753a88, #734b6d); /*Can change colors as u wish*/
       background-size: 400% 400%;
       animation: gradient 15s ease infinite;
   }
